readme update: parameters

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 h1. hey!
 
-lkxjdfghdlthjz
+Workflow assumptions:
+- Inputs are fastq not bam (the RESORTBAM os not active)
+- Temporary files are not removed (the REMOVETEMPFILES is not active)
+- The tool SNVMix is not used, so removed from the run file
