I removed all mentions of INPUTDIR and SAMPLEDIR from the .sh files

--- a/README
+++ b/README
@@ -3,4 +3,5 @@ h1. hey!
 Workflow assumptions:
 - Inputs are fastq not bam (the RESORTBAM os not active)
 - Temporary files are not removed (the REMOVETEMPFILES is not active)
-- The tool SNVMix is not used, so removed from the run file
+- The tool SNVMix is not used, so removed from the run fil
+- Deleted all mentions of INPUTDIR and SAMPLEDIR 
