--- a/README
+++ b/README
@@ -24,3 +24,9 @@ June 22, 2016:
 - 	LABINDEX 
 - 	LANEINDEX
 - 	SOMATIC_CALLER
+- 	BAM2FASTQFLAG
+- 	BAM2FASTQPARMS
+- 	REVERTSAM
+- 	FASTQCFLAG
+- 	FASTQCPARMS
+- 	CHUNKFASTQ
