--- a/README
+++ b/README
@@ -30,3 +30,21 @@ June 22, 2016:
 - 	FASTQCFLAG
 - 	FASTQCPARMS
 - 	CHUNKFASTQ
+- 	BWAPARAMS
+- 	NOVOPARAMS
+- 	BLATPARAMS
+- 	REALIGNPARMS
+- 	REMOVE_DUP
+- 	REORDERSAM
+- 	REALIGNORDER
+-	CHRINDEX
+- 	PEDIGREE
+- 	VARIANT_TYPE
+- 	UNIFIEDGENOTYPERPARMS
+- 	SNVMIX2PARMS
+- 	SNVMIX2FILTER 
+- 	EPILOGUE
+- 	GENOMEBUILD
+- 	EMIT_ALL_SITES
+- 	DEPTH_FILTER
+- 	TARGETTED
