--- a/README
+++ b/README
@@ -49,3 +49,11 @@ June 22, 2016:
 - 	DEPTH_FILTER
 - 	TARGETTED
 - 	SCRIPTDIR
+- 	KGENOME
+-	ONTARGET
+-	NOVOINDEX
+-	BWAINDEX
+-	BWAMEMINDEX
+-	NOVODIR
+- 	BWADIR
+-	BWAMEMDIR
