--- a/README
+++ b/README
@@ -77,12 +77,18 @@ New and changed parameters and meanings:
 Code changes:
 - pbs.MERGE
 - Use the variable alignjobid : instead of jobid, and save to pbs.ALIGN and pbs.summary_dependencies (to solve problems in deducing the right pbs job id in the queue)
+- ALIGNERTOOL: checks for the tools used for alignment (instead of the variable ALIGNER 
+- gatkdir: this is introduced instead of gatk_dir
+- NOVOCRAFT is introduced as replacement for NOVOSORT to allow for the use of both novoalign and novosort
+
+
 
 To do:
 - The old pipeline assumes that all tools are module loaded first then called directly. For more generality, the complete path of each tool is specified instead: SAMMODULE is replaced with SAMDIR, and the variable name is samtools. Still need to check the full path of each tool and update that the executable actually exists. So far, the following paths have been integrated:
 -	BWAMEMDIR
 -	SAMTOOLSDIR
 -	NOVOCRAFTDIR
+-	SAMBLASTERDIR (just to allow the option, not sure if will be of value)
 
 
 
