--- a/README
+++ b/README
@@ -83,6 +83,7 @@ Code changes:
 - gatkdir: this is introduced instead of gatk_dir
 - NOVOCRAFT is introduced as replacement for NOVOSORT to allow for the use of both novoalign and novosort
 - A new variable INDELDIR: directory of known indels split by chromosome name
+- The script 'merge_vcf_and_bam.sh' has been modified to merge_vcf.sh, so that it only does the merging (by commenting out all instructions relevant to merging bams). If variants can be called on per chromosome basis, then no real value is added from merging the bams, except maybe the convenience of the client who might consider calling variants again from them. A little later, this functionality can be added, by copying the relevant code pieces from this script to a new script with a more meaningful name. 
 
 
 To do:
