--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Workflow assumptions
 - Inputs are fastq not bam (the RESORTBAM os not active)
 - Temporary files are not removed (the REMOVETEMPFILES is not active)
 - The AnisimovLauncher is not used in this workflow
-
+- To allow for adapter trimming using trimmomatic, the following variables are needed in the runfile: SAMPLEINFORMATION, OUTPUTDIR, TMPDIR, ADAPTERS, FASTQCDIR, TRIMMOMATICDIR, in addition to PBS torque parameters: PBSCORES, PBSNODES, PBSQUEUE, PBSWALLTIME and EMAIL
 
 Changelog
 
